# Backdoor

./: .env.example  .gitignore  Cargo.toml  README.md  __init__.py  config.py  config.toml  core.py  crypto.py  main.py  requirements.txt
communication/: __init__.py  manager.py
modules/: __init__.py  manager.py
persistence/: __init__.py  manager.py
src/: communication.rs  config.rs  core.rs  main.rs  modules.rs  persistence.rs  stealth.rs
stealth/: __init__.py  manager.py
