[package]
name = "backdoor"
version = "0.1.0"
edition = "2021"
authors = ["Cassandra Team"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
ring = "0.16"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
regex = "1.10"
futures = "0.3"
whoami = "1.4"
toml = "0.8"